2009-02-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Add a preference to reduce the power of file:// URLs.

        * WebView/WebPreferenceKeysPrivate.h:
        * WebView/WebPreferences.mm:
        (+[WebPreferences initialize]):
        (-[WebPreferences allowUniversalAccessFromFileUrls]):
        (-[WebPreferences setAllowUniversalAccessFromFileUrls:]):
        * WebView/WebPreferencesPrivate.h:
        * WebView/WebView.mm:
        (-[WebView _preferencesChangedNotification:]):

2009-02-27  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Anders Carlsson

        https://bugs.webkit.org/show_bug.cgi?id=24242
        
        setCursor(), and resetCursorRects() on Tiger, were using global, not local
        coordinates for elementAtPoint:
        
        * WebView/WebHTMLView.mm:
        (resetCursorRects):
        (setCursor):

2009-02-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Add a preference to reduce the power of file:// URLs.

        * WebView/WebPreferenceKeysPrivate.h:
        * WebView/WebPreferences.mm:
        (+[WebPreferences initialize]):
        (-[WebPreferences allowUniversalAccessFromFileUrls]):
        (-[WebPreferences setAllowUniversalAccessFromFileUrls:]):
        * WebView/WebPreferencesPrivate.h:
        * WebView/WebView.mm:
        (-[WebView _preferencesChangedNotification:]):

2009-02-26  Adele Peterson  <adele@apple.com>

        Reviewed by Geoff Garen.

        Fix for <rdar://problem/6618166>
        https://bugs.webkit.org/show_bug.cgi?id=24216
        (REGRESSION r36919) Safari 4 Beta causes MSN Messenger's text entry field to lose focus after entering a message

        During a series of firstResponder changes, at some point while the WebHTMLView was losing first responder status,
        we incorrectly marked the page as active, and then when the WebHTMLView became first responder again, setActive did nothing.